--- a/gacha.html
+++ b/gacha.html
@@ -3,6 +3,9 @@
     <head>       
         <title>Gacha</title>
         <meta charset="utf-8">
+        <link rel = "icon" href =  
+            "chocola_profile_small_transparent.png" 
+        type = "image/x-icon"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
