--- a/beat_try/example6.html
+++ b/beat_try/example6.html
@@ -32,15 +32,15 @@
         <br>
         <hr>
         <p id="animu" style="color: burlywood;">place holder id=animu</p>
-        <button type="button" onclick="document.getElementById('frame').src = 'gallery_example_folder/animu_pic/kanna01.jpg';
+        <button type="button" onclick="document.getElementById('frame').src = '../gallery_example_folder/animu_pic/kanna01.jpg';
         document.getElementById('animu').innerHTML = 'kanna';">kanna</button>
-        <button type="button" onclick="document.getElementById('frame').src = 'gallery_example_folder/animu_pic/amatsun01.jpg';
+        <button type="button" onclick="document.getElementById('frame').src = '../gallery_example_folder/animu_pic/amatsun01.jpg';
         document.getElementById('animu').innerHTML = 'amatsun';">amatsun</button>
         <br>
         <button type="button" onclick="document.getElementById('frame').style.display = 'block'">show</button>
         <button type="button" onclick="document.getElementById('frame').style.display = 'none'">hide</button>
         <br>
-        <img id="frame" class="img-rounded" src="gallery_example_folder/animu_pic/kanna01.jpg" width="60%">
+        <img id="frame" class="img-rounded" src="../gallery_example_folder/animu_pic/kanna01.jpg" width="60%">
       </div>
       <div class="col">
         <h3><b>column 2</b></h3>
