managed to get background image position properly

--- a/mugi/home/home.html
+++ b/mugi/home/home.html
@@ -11,12 +11,16 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col text-center" id="bg-img">
+                    <!--home.css will do the thing-->
+                </div>
+                <div class="col text-center" id="">
                     <h1>h1</h1>
                     <h1 id="go">go</h1>
                     <p>hello</p>
                 </div>
-                <div class="col text-center" id="bg-img">
-                    <img src="mugi_site.png"  class="img-fluid" >
+                <div class="col text-center" id="bg-img2">
+                    <!--<img src="mugi_site.png"  class="img-fluid" >-->
+                    <p id="green">It flip this too!</p>
                 </div>
             </div>
         </div>
