--- a/mugi/home/home.html
+++ b/mugi/home/home.html
@@ -3,8 +3,11 @@
     <head>
         <title>Mugi - home</title>
         <meta charset="utf-8">
-        <link rel = "icon" href = "../../beat_try/chocola_profile_small_transparent.png" type = "image/x-icon">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel = "icon" href = "../../beat_try/chocola_profile_small_transparent.png" 
+            type = "image/x-icon">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
+            crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="home.css">
     </head>
 
@@ -40,8 +43,6 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
@@ -52,10 +53,9 @@
                 <div class="col text-center" id="bg-img">
                     <!--home.css will do the thing-->
                 </div>
-                <div class="col text-center" id="">
-                    <h1>h1</h1>
-                    <h1 id="go">go</h1>
-                    <p>hello</p>
+                <div class="col text-center" id="main_col">
+                    <h1 id="title">Mugi adventure</h1>
+                    <h1 id="go">RPG anime platformer with fighting game element</h1>
                 </div>
                 <div class="col text-center" id="bg-img2">
                     <!--<img src="mugi_site.png"  class="img-fluid" >-->
