--- a/mugi/home/home.html
+++ b/mugi/home/home.html
@@ -31,7 +31,8 @@
                 <div class="col text-center" id="main_col">
                     <h1 id="title">Mugi adventure</h1>
                     <h1 id="go">RPG anime platformer with fighting game element</h1>
-                    <h2 title="boss fight!">[some pic here]</h2>
+                    <h2 id="boss_fight">[some pic here]</h2>
+                    <h2 id="hidden_boss_fight">[hidden pic here]</h2>
                     <h1>many boss fights with cool ending</h1>
                 </div>
                 <div class="col text-center" id="bg-img2">
@@ -41,13 +42,19 @@
         </div>
     </body>
     <script>
-        // mouse over fadeto 0.5 mouseout fadeto 1.0
-        $("h2").mouseenter(function(){
-            $("h2").fadeTo(64,0.5);
-        });
+        $(document).ready(function(){
+            // mouse over fadeto 0.5 mouseout fadeto 1.0
+            $("h2#boss_fight").mouseenter(function () {
+                $("h2#boss_fight").fadeTo(64, 0.5);
+            });
 
-        $("h2").mouseleave(function(){
-            $("h2").fadeTo(64,1);
-        });       
+            $("h2#boss_fight").mouseleave(function () {
+                $("h2#boss_fight").fadeTo(64, 1);
+            });
+
+            $("h2#boss_fight").click(function(){
+                $("h2#hidden_boss_fight").slideDown("slow");
+            });
+        });
     </script>
 </html>
