--- a/mugi/home/home.html
+++ b/mugi/home/home.html
@@ -62,6 +62,7 @@
             $("button#button1").click(function(){
                $("img#boss_fight").slideToggle("fast"); 
             });
+            // comment; can be deleted
 
         });
     </script>
