--- a/mugi/home/home.html
+++ b/mugi/home/home.html
@@ -62,7 +62,7 @@
             $("button#button1").click(function(){
                $("img#boss_fight").slideToggle("fast"); 
             });
-            // another comment
+            // super comment
 
         });
     </script>
