added about.html and chat-like text

--- a/mugi/home/about.html
+++ b/mugi/home/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <title>Mugi - home</title>
+        <title>Mugi - about</title>
         <meta charset="utf-8">
         <link rel = "icon" href = "../../beat_try/chocola_profile_small_transparent.png" 
               type = "image/x-icon">
@@ -17,9 +17,9 @@
 
     <!-- Navbar content -->
     <nav class="nav justify-content-center">
-        <a class="nav-link active" id="active" href="home.html">home</a>
-        <a class="nav-link " href="about.html">about</a>
-        <a class="nav-link " href="#">contact</a>
+        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" id="active" href="about.html">About</a>
+        <a class="nav-link" href="#">Contact</a>
 
     </nav>
 
@@ -31,8 +31,41 @@
                     <!--background image-->
                 </div>
                 <div class="col text-center" id="main_col">
-                    <h1 id="title">Mugi adventure</h1>
-                    <h1 id="go">RPG anime platformer with fighting game element</h1>
+                    <h1 id="title">ABOUT</h1>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-3 d-flex justify-content-center text-center">
+                                <img id="chat_profile" src="mugi.jpg">
+                            </div>
+                            <div class="col-9 align-self-center">
+                                <h1 id="chat">HI! My name is Beat and <br>here are some of my story.</h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3 d-flex justify-content-center text-center">
+                                <img id="chat_profile" src="mugi.jpg">
+                            </div>                           
+                            <div class="col-9 align-self-center">
+                                <h1 id="chat">My dream is to create an anime-sh game.</h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3 d-flex justify-content-center text-center">
+                                <img id="chat_profile" src="mugi.jpg">
+                            </div>                           
+                            <div class="col-9 align-self-center">
+                                <h1 id="chat">Something like my profile pic or this.</h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3 d-flex justify-content-center text-center">
+                                <img id="chat_profile" src="mugi.jpg">
+                            </div>                           
+                            <div class="col-9 align-self-center">
+                                <img id="img_chat" src="mugi_site.png">
+                            </div>
+                        </div>
+                    </div>
                     <img src="dew_adventure.png" id="boss_fight">
                     <h2 id="hidden_boss_fight">[hidden pic here]</h2>
                     <h1>many boss fights with cool cinimatic</h1>
