--- a/mugi/home/about.html
+++ b/mugi/home/about.html
@@ -58,10 +58,10 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-3 d-flex justify-content-center text-center">
-                                <img id="chat_profile" src="mugi.jpg">
+                            <div class="col-3">
+                                <img class="" id="chat_profile2" src="mugi.jpg">
                             </div>                           
-                            <div class="col-9 align-self-center">
+                            <div class="col-9">
                                 <img id="img_chat" src="mugi_site.png">
                             </div>
                         </div>
@@ -71,7 +71,18 @@
                     <h1>many boss fights with cool cinimatic</h1>
                     <button id="button1">css button</button>
                     <button class="btn">bootstrap button</button>
-                    <h1 id="go"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque nisl elementum nulla pulvinar, id iaculis est mattis. Vivamus ac tempor eros. Nullam hendrerit luctus massa ut aliquet. Praesent ac dictum lorem. Vestibulum eget nisi sapien. Pellentesque ac neque in mauris auctor mollis. Donec enim odio, ultricies sit amet eleifend quis, laoreet tincidunt sapien. In hac habitasse platea dictumst. Donec elementum pharetra mi vitae dapibus. Aenean in viverra urna. Fusce nec pulvinar felis. Ut aliquet, orci eget porta euismod, enim leo consequat ligula, non placerat tellus elit eu tellus. </h1>
+                    <h1 id="go"> Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Vestibulum pellentesque 
+                        nisl elementum nulla pulvinar, id iaculis est mattis.
+                        Vivamus ac tempor eros. Nullam hendrerit luctus massa 
+                        ut aliquet. Praesent ac dictum lorem. Vestibulum eget 
+                        nisi sapien. Pellentesque ac neque in mauris auctor 
+                        mollis. Donec enim odio, ultricies sit amet eleifend 
+                        quis, laoreet tincidunt sapien. In hac habitasse platea
+                        dictumst. Donec elementum pharetra mi vitae dapibus.
+                        Aenean in viverra urna. Fusce nec pulvinar felis.
+                        Ut aliquet, orci eget porta euismod, enim leo consequat 
+                        ligula, non placerat tellus elit eu tellus. </h1>
                 </div>
                 <div class="col text-center" id="bg-img2">
                     <!--<img src="mugi_site.png"  class="img-fluid" >-->
